--- a/Clients/MvcApp/Views/Home/Index.cshtml
+++ b/Clients/MvcApp/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewBag.PageTitle = "Start";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h2>Home Page</h2>
 </div>
