--- a/Clients/MvcApp/Views/Shared/_Layout.cshtml
+++ b/Clients/MvcApp/Views/Shared/_Layout.cshtml
@@ -2,20 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="~/css/styles.css">
-    <title>Westcoast College</title>
+    <title>Westcoast College - @ViewBag.PageTitle</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a asp-controller="Courses" asp-action="Index">Courses</a></li>
-            </ul>
-        </nav>
-    </header>
+   <nav id="navbar">
+    <ul>
+        @* <li><a asp-controller="Home" asp-action="Index">Start</a></li> *@
+        <li><a asp-controller="Courses" asp-action="Index">Our Courses</a></li>
+        <li><a href="">About us</a></li>
+        <li><a href="">Profile</a></li>
+    </ul>
+     <a asp-controller="Home" asp-action="Index"><h1 class="logo"><span class="text-primary" ><i class="fa-solid fa-graduation-cap"></i>Westcoast</span>College</h1></a>
+   </nav>
     <main>
         @RenderBody()
     </main>
+    <script  src="~/js/app.js"></script>
 </body>
 </html> 
