--- a/Clients/MvcApp/wwwroot/css/styles.css
+++ b/Clients/MvcApp/wwwroot/css/styles.css
@@ -14,9 +14,86 @@ body {
 }
 
 main {
-  padding: 3rem 2rem;
+  padding: 5rem 2rem;
+}
+
+h1 {
+  color: #f4f4f4;
+  font-size: xx-large;
+  font-style: italic;
 }
 
 h2 {
   padding: 0 0 1.1rem 0;
+}
+
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #333;
+  opacity: 0.9;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4.5rem;
+  padding: 0 2rem;
+  z-index: 2;
+}
+
+#navbar a {
+  color: #f4f4f4;
+  padding: 0.8rem 0.5rem;
+  margin-right: 0.4rem;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+#navbar ul {
+  display: flex;
+  list-style: none;
+}
+
+#navbar .logo {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.text-primary {
+  color: rgb(110, 160, 95);
+}
+.gallery-wrapper {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 2rem;
+}
+
+.gallery-card {
+  display: flexbox;
+  flex-direction: row;
+  /* align-items: normal; */
+  gap: 0.8rem;
+  background: #f4f4f4;
+  padding: 1rem 1.5rem;
+  border: #888 solid 1px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.2);
+}
+
+.gallery-card h3 {
+  padding-bottom: 0.5rem;
+}
+.gallery-card a {
+  color: rgb(65, 94, 56);
+}
+.gallery-card p {
+  padding-top: 0.3rem;
+}
+
+.page-title {
+  display: flex;
+  justify-content: left;
+  color: rgb(110, 160, 95);
+  padding: 2rem 0 1rem 0;
 }
