--- a/Clients/MvcApp/Views/Courses/Index.cshtml
+++ b/Clients/MvcApp/Views/Courses/Index.cshtml
@@ -1,4 +1,8 @@
 @model IEnumerable<MvcApp.ViewModels.CourseViewModel>
+@section styles{
+    <link rel="stylesheet" href="~/css/styles.css">
+}
+
 @{
     ViewData["Title"] = "Available Courses";
 }
