--- a/Clients/MvcApp/Views/Shared/_Layout.cshtml
+++ b/Clients/MvcApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="~/css/styles.css">
     <title>Westcoast College - @ViewBag.PageTitle</title>
+      @RenderSection("styles", required: false) @* this is causing me a lot of problems. this turns off so css won't work on every page.*@
 </head>
 <body>
    <nav id="navbar">
