--- a/Clients/MvcApp/wwwroot/css/styles.css
+++ b/Clients/MvcApp/wwwroot/css/styles.css
@@ -97,3 +97,24 @@ h2 {
   color: rgb(110, 160, 95);
   padding: 2rem 0 1rem 0;
 }
+
+@media (max-width: 500px) {
+  .gallery-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    max-width: 500px;
+  }
+  .gallery-card {
+    margin: auto;
+  }
+}
+@media (min-width: 501px) and (max-width: 768px) {
+  .gallery-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1824px) {
+  .gallery-wrapper {
+    width: 80%;
+  }
+}
