--- a/Clients/MvcApp/wwwroot/css/styles.css
+++ b/Clients/MvcApp/wwwroot/css/styles.css
@@ -9,7 +9,8 @@ font-family: 'Roboto', sans-serif; */
   padding: 0;
   box-sizing: border-box;
 }
-body {
+body,
+textarea {
   font-family: 'Roboto', sans-serif;
 }
 
@@ -25,6 +26,13 @@ h1 {
 
 h2 {
   padding: 0 0 1.1rem 0;
+}
+
+input,
+textarea {
+  border: #888 solid 1px;
+  padding: 0.3rem 0.4rem;
+  border-radius: 5px;
 }
 
 #navbar {
@@ -117,4 +125,46 @@ h2 {
   .gallery-wrapper {
     width: 80%;
   }
+}
+
+.go-back {
+  padding: 1rem;
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: rgb(110, 160, 95);
+  margin: 1rem 0;
+}
+
+.form-container {
+  max-width: 600px;
+  margin: auto;
+  border: #888 solid 1px;
+  box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.6);
+}
+
+.form-container h4 {
+  background: rgb(110, 160, 95);
+  color: #f4f4f4;
+  padding: 0.5rem;
+  text-align: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.6rem;
+  width: 100%;
+}
+
+.form-control {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control input,
+textarea {
+  width: 250px;
 }
