post course method completed

--- a/Clients/MvcApp/Views/Courses/Create.cshtml
+++ b/Clients/MvcApp/Views/Courses/Create.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="form-control">
             <label asp-for="@Model!.Details"></label>
-            <textarea asp-for="@Model!.Description"></textarea>
+            <textarea asp-for="@Model!.Details"></textarea>
         </div>
          <button type="submit" class="btn">Save</button>
     </form>
