--- a/Clients/MvcApp/wwwroot/css/styles.css
+++ b/Clients/MvcApp/wwwroot/css/styles.css
@@ -127,6 +127,25 @@ textarea {
   }
 }
 
+.btn {
+  display: inline-block;
+  background: #333;
+  color: #f4f4f4;
+  padding: 0.4rem 2rem;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 0.8rem;
+  margin-top: 0.3rem;
+  border: none;
+  outline: none !important;
+}
+
+.btn:hover {
+  background: #888;
+  color: #333;
+  font-weight: bold;
+}
+
 .go-back {
   padding: 1rem;
   font-size: 1.2rem;
