--- a/Clients/MvcApp/Views/Shared/_Layout.cshtml
+++ b/Clients/MvcApp/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <ul>
         @* <li><a asp-controller="Home" asp-action="Index">Start</a></li> *@
         <li><a asp-controller="Courses" asp-action="Index">Our Courses</a></li>
-        <li><a href="">About us</a></li>
+        <li><a asp-controller="Courses" asp-action="Create">Create Course</a></li>
         <li><a href="">Profile</a></li>
     </ul>
      <a asp-controller="Home" asp-action="Index"><h1 class="logo"><span class="text-primary" ><i class="fa-solid fa-graduation-cap"></i>Westcoast</span>College</h1></a>
