--- a/Clients/react-app/src/components/Courses/customer-Registering-component/CourseListPage.css
+++ b/Clients/react-app/src/components/Courses/customer-Registering-component/CourseListPage.css
@@ -11,7 +11,7 @@ p {
 }
 .search-container {
   display: flex;
-  margin-bottom: 20px;
+  margin: 20px 0 0;
 }
 
 .search-container input {
@@ -70,6 +70,18 @@ p {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.course-expand-details {
+  max-height: 0;
+  overflow: hidden;
+  margin-top: 10px;
+  transition: max-height 0.3s ease;
+}
+
+.course-container.active .course-expand-details {
+  max-height: 1000px; /* Adjust the value based on your content */
+  transition: max-height 0.3s ease;
+}
+/* 
 .register-button {
   background-color: var(--primary-color);
   color: #fff;
@@ -82,15 +94,78 @@ p {
 .register-button:hover {
   background-color: var(--secondary-color);
 }
-
-.course-expand-details {
-  max-height: 0;
-  overflow: hidden;
-  margin-top: 10px;
-  transition: max-height 0.3s ease;
+.back-link {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: var(--primary-color);
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
-.course-container.active .course-expand-details {
-  max-height: 1000px; /* Adjust the value based on your content */
-  transition: max-height 0.3s ease;
+.back-link:hover {
+  background-color: var(--secondary-color);
+} */
+
+.register-link {
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-decoration: none;
+  display: inline-block;
+  margin-right: 10px; /* Add spacing between buttons */
+  cursor: pointer;
+}
+
+.register-link:hover {
+  background-color: var(--secondary-color);
+}
+
+.back-button {
+  background-color: var(--secondary-color);
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.back-button:hover {
+  background-color: var(--secondary-color);
+}
+.scroll-to-top-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.scroll-to-top-button.visible {
+  opacity: 1;
+}
+
+.scroll-to-top-button:focus {
+  outline: none;
+}
+.profile-button {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 10px 20px;
+  background-color: var(--nav-bar-color);
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
