--- a/Clients/react-app/src/utilities.css
+++ b/Clients/react-app/src/utilities.css
@@ -6,7 +6,7 @@
   --border-color: #888;
   --dark-color: #212121;
   --light-color: #f4f4f4;
-  --backgorund-color: 2b2a2a;
+  --backgorund-color: #2b2a2a;
   --nav-bar-color: #333;
   --table-background-color: #fff;
   --separator-color: #c9c6c6;
